# split-server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check-and-test.yml  clippy.yml  release.yml
src/: dataset.rs  main.rs
static/: data.csv
